# Auto-Clicker

./: CMakeLists.txt  Makefile  README.md  main.c  resources.gresource
SOURCE_CODE/: main.c
database/: accountant_manager_earnings.sql  accountant_manager_expenses.sql  accountant_manager_routines.sql  accountant_manager_saved.sql  accountant_manager_statics.sql  accountant_manager_users.sql
inc/: account.h  account_gui.h  boxes.h  database.h  date_picker.h  dialog.h  graph.h  gui.h  list.h  login.h  node.h
src/: account.cpp  account_gui.cpp  boxes.cpp  database.cpp  date_picker.cpp  dialog.cpp  graph.cpp  gui.cpp  list.cpp  login.cpp  main.cpp
